<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroEventoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_evento"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtCENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_nome"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtCELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_local"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtCELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_local_evento"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtCECidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_cidade"
                android:textSize="18sp" />


            <!--<EditText-->
                <!--android:id="@+id/edtCECidade"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/ce_cidade_evento"-->
                <!--android:inputType="textPersonName" />-->

            <Spinner
                android:id="@+id/spinner_CECidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/txtITelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_data"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txCEData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_data_evento"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtCEHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_horario"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txCEHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_hora_evento"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/CEtxtQtdVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_qtdVagas"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/CEedtVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_qtdTotalVagas"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCECancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/vermelhoBtn"
                    android:drawableLeft="@drawable/baseline_undo_white_18dp"
                    android:text="@string/ce_btcancelar"
                    android:textColor="@color/brancoText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnIECadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/verdeBtn"
                    android:drawableLeft="@drawable/baseline_add_circle_white_18dp"
                    android:text="@string/ce_btcadastrar"
                    android:textColor="@color/brancoText"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>