<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarEventoActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtEdENomeEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/verdeBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/txtEdELocalHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEdECidadeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resumotxtEdEQtdVagas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEdENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_evento"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEdENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_nome"
                android:maxLength="44"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEdELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_local"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEdELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_local_evento"
                android:maxLength="22"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEdECidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_cidade"
                android:textSize="18sp" />

            <!--<EditText-->
                <!--android:id="@+id/edtEdECidade"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/ce_cidade_evento"-->
                <!--android:inputType="textPersonName" />-->

            <Spinner
                android:id="@+id/spinner_EECidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/txtEdETelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_data"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edtEdEData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_data_evento"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEdEHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_horario"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edtEdEHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_hora_evento"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEdEQtdVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ce_qtdVagas"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEdEVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ce_qtdTotalVagas"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <!--<Button-->
                <!--android:id="@+id/btnEdE_ExcluirEvento"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:backgroundTint="@color/vermelhoBtn"-->
                <!--android:drawableLeft="@drawable/baseline_clear_white_24dp"-->
                <!--android:text="@string/excluir"-->
                <!--android:textColor="@color/brancoText"-->
                <!--android:textSize="14sp" />-->

                <Button
                    android:id="@+id/btnEdECancelar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/vermelhoBtn"
                    android:drawableLeft="@drawable/baseline_undo_white_18dp"
                    android:text="@string/ce_btcancelar"
                    android:textColor="@color/brancoText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnEdEEditar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/verdeBtn"
                    android:drawableLeft="@drawable/baseline_edit_white_18dp"
                    android:text="@string/editar"
                    android:textColor="@color/brancoText"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>