<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscricaoEventoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNomeEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/verdeBtn"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCidadeData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtLocalHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ie_txtQtdVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtCENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_nome"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_nome"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtCELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIEEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_email"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtITelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_telefone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIETelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_telefone"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swConheceTema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:checked="false"
                android:fontFamily="sans-serif-condensed-light"
                android:splitTrack="false"
                android:text="@string/ie_sw_conhece_tema"
                android:textSize="20sp"
                tools:checked="false" />

            <Button
                android:id="@+id/btnIECadastrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/verdeBtn"
                android:drawableLeft="@drawable/baseline_check_white_24dp"
                android:fontFamily="sans-serif"
                android:text="@string/ie_bt_inscrever"
                android:textAllCaps="false"
                android:textColor="@color/brancoText"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>