<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosDoParticipanteActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="406dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDPNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_nome"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtDPNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_nome"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDPEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtDPEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_email"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDPTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_telefone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtDPTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_telefone"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDPConhecimentoTema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDPCadastrar"
                android:layout_width="69dp"
                android:layout_height="62dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/verdeBtn"
                android:drawableStart="@drawable/baseline_undo_white_18dp"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:textColor="@color/brancoText"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

